Changes panel back to relative, fixes overflow issue

--- a/themes/default/panels.css
+++ b/themes/default/panels.css
@@ -1,11 +1,11 @@
 #panel {
 
-    background-color: rgba(50,50,50,.9);
+    background-color: rgba(50,50,50,.6);
     color: aliceblue;
     display: block;
-    overflow: auto;
+    /*overflow: auto;*/
     font-size: 20px;
-    position: fixed;
+    position: relative;
     top: 0px;
     left:0px;
     right:0px;
